src/fauxton/assets/less/database.less
/*  Licensed under the Apache License, Version 2.0 (the "License"); you may not
 *  use this file except in compliance with the License. You may obtain a copy of
 *  the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 *  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 *  License for the specific language governing permissions and limitations under
 *  the License.
 */

/* =database
   ---------------------------------------------------------------------- */
#db-tools {
    position: absolute;
    top: -7px;
    right: 0;
    width: 390px;

    .btn-group {
        position: absolute;
        left: 0;
        top: 6px;
    }

    form {
        position: absolute;
        right: 0;
        top: 0;
    }
}

.tools .nav {
    margin-bottom: 10px;
}

#sidenav {
    padding-top: 10px;

    h3 {
        margin: 10px 0;
    }

    li a span.divider {
        background: none;
        color: #ccc;
        padding: 0 2px;
    }

    li.nav-header a {
        display: inline
    }

    div.btn-group {
        display: inline-block;
    }

    li.nav-header, #sidenav li a {
        padding-left: 4px;
    }

    li.active a {
        background-color: #ddd;
        color: #333;
        text-shadow: none;
    }
}

.edit {
    display: none;

    form {
        margin-bottom: 0;
    }

    h3 {
        border-bottom: 1px solid #ccc;
        font-size: 100%;
        line-height: 1;
        margin-bottom: 18px;
    }

    textarea {
        height: 100px;
        width: 95%;
    }

    .btn-toolbar {
        margin-bottom: 0;
    }

    .preview {
        width: 100px;
    }

    .save {
    }
}

#new-view-index {
    .confirm {
        display: none;
    }

    .confirm .progress {
        display: none;
        margin: 20px;
    }

    textarea {
        height: 100px;
        width: 95%;
    }
}

.view {
    display: none;

    .result-tools {
        float: left;
        width: 100%;
        margin-bottom: 10px;
    }

    table td div  {
        position: relative;
    }

    table td div div {
        display: none;
        line-height: 1;
        position: absolute;
        right: 4px;
        top: 4px;
    }

    table td div:hover div a.edits {
        padding-left: 16px;
        padding-right: 16px;
    }

    table td div:hover div {
        display: block;
    }

}
.view.show {
    display: block;
}
.view.show.hidden-by-params {
    display: none;
}
#database .view table tr td {
    padding: 0;
}

.loading {display: none;}

.view-request-duration {
  padding-right: 10px;
  float: right;
}

table.active-tasks{
    th {
        cursor: pointer;
    }
}

.well{
    .row-fluid{
        margin: 0;
    }
    .row-fluid .row-fluid:last-child .well-item {
        border: none;
    }
    .well-item{
        color: #666;
        font-size: 12px;
        border-bottom: 1px solid #e5e5e5;
        padding: 8px 4px;
        strong {
            font-size: 16px;
        }  
    } 
}


#doc {
    .dropdown-menu{
        width: auto;
    }
}
#tabs {
    height: 40px;
}

.databases{
    a.db-actions,
    a.db-actions:visited{
        color: @red; 
        border: 1px solid #e3e3e3;
        padding: 5px 7px;
        .border-radius(6px);
        text-decoration: none;
        font-size: 19px;
    }
}
.btn-group{
    ul.dropdown-menu li a:before{
        margin-right: 10px;
    }
}

.design-doc-group{
    .span3 { margin: 0;}
    #new-ddoc-section {
        margin-top: 10px;
        label{ width: 100px}
        .controls{
            margin-left: 100px;
        }
    }
}

